--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  max-height: 100%;
+  background: #444;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.main-outline {
+  margin-top: 10em;
+  height: 39em;
+  border: 1px, solid, #444;
+  border-radius: 5px;
+  background: #444;
+}
+
+.users-box {
+  max-width: 100vw;
+  margin: 1em 0 0 0;
+  height: 30em;
+  background: #444;
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+}
+
+.chat-box {
+  margin: 1em 0 0 0;
+  height: 30em;
+  background: #444;
+  border: 1px solid whitesmoke;
+  border-radius: 5px;
+}
+
+.labels {
+  color: whitesmoke;
+}
+
+.text-input {
+  margin-top: 2em;
 }
