text area controls

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,6 +46,8 @@ body {
   height: 30em;
   border: 1px solid whitesmoke;
   border-radius: 5px;
+  overflow: auto;
+  position: relative;
 }
 
 .labels {
@@ -80,9 +82,16 @@ body {
 
 .chat-font {
   color: whitesmoke;
+  white-space: pre;
+}
+
+.messagesContainer {
+  /* position: absolute; */
+  bottom: 0;
+  overflow: auto;
+  max-height: 100%;
 }
 
 .messages {
-  position: absolute;
-  bottom: 0;
+  text-align: left;
 }
