--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,10 +48,17 @@ body {
   border-radius: 5px;
   overflow: auto;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .labels {
   color: hotpink !important;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .text-input {
@@ -86,12 +93,13 @@ body {
 }
 
 .messagesContainer {
-  /* position: absolute; */
   bottom: 0;
   overflow: auto;
-  max-height: 100%;
+
+  display: flex;
 }
 
 .messages {
   text-align: left;
+  flex-flow: column-reverse;
 }
