starting on login page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,12 +83,12 @@ body {
 }
 
 .you {
-  color: whitesmoke;
+  color: hotpink;
   font-weight: 700;
 }
 
 .users-online {
-  color: black;
+  color: #aaa;
   font-weight: 700;
 }
 
