moment added to messages

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -97,6 +97,11 @@ body {
   color: #aaa;
 }
 
+.moment {
+  color: #ddd;
+  font-size: .5em;
+}
+
 .chat-font {
   color: whitesmoke;
   white-space: pre;
