--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,7 +98,7 @@ body {
 }
 
 .moment {
-  color: #ddd;
+  color: #bbb;
   font-size: .5em;
 }
 
@@ -118,9 +118,21 @@ body {
   padding: 0 0 5px 5px;
 }
 
+.messageUserName {
+  display: block;
+}
+
+.messageMomentInfo {
+  margin-top: -10px;
+  vertical-align: top;
+  
+}
+
 .messages {
   max-width: 100%;
   text-align: left;
+  padding-bottom: 5px;
+  
 }
 
 /* css for login */
